--- a/tox.ini
+++ b/tox.ini
@@ -38,6 +38,6 @@ deps=coverage>=3.3
      -r{toxinidir}/requirements.txt
 commands=python setup.py develop
          coverage erase
-         coverage run -m unittest discover nose2
+         coverage run -m nose2.__main__ nose2
          coverage report --include=*nose2* --omit=*nose2/tests*
          coverage html -d cover --include=*nose2* --omit=*nose2/tests*
