Only submit coveralls build for python 3.3

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 script:
   - PYTHONPATH=. coverage run -m nose2.__main__ -v
 after_success:
-  - coveralls
+  - python -c "import sys; sys.exit(sys.version_info[0:2]!=(3,3));" && coveralls
 deploy:
   provider: pypi
   user: jpellerin
