Added cov33 which gives 80% coverage compared to 53% for cov27

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py26,py27,py32,py33,pypy,docs,self27,cov27
+envlist=py26,py27,py32,py33,pypy,docs,self27,cov33
 
 # Default settings for py27, py32, py33 and pypy
 [testenv]
@@ -29,11 +29,12 @@ deps=-r{toxinidir}/requirements.txt
 setenv=PYTHONPATH={toxinidir}
 commands=python -m nose2.__main__ []
 
-[testenv:cov27]
-basepython=python2.7
+[testenv:cov33]
+basepython=python3.3
 deps=coverage>=3.3
      -r{toxinidir}/requirements.txt
-commands=coverage erase
-         coverage run -m unittest discover []
+commands=python setup.py develop
+         coverage erase
+         coverage run -m nose2.__main__ nose2
          coverage report --include=*nose2* --omit=*nose2/tests*
          coverage html -d cover --include=*nose2* --omit=*nose2/tests*
