Omit backport coverage

--- a/tox.ini
+++ b/tox.ini
@@ -36,5 +36,5 @@ deps=coverage>=3.3
 commands=python setup.py develop
          coverage erase
          coverage run -m nose2.__main__ nose2
-         coverage report --include=*nose2* --omit=*nose2/tests*
-         coverage html -d cover --include=*nose2* --omit=*nose2/tests*
+         coverage report --include=*nose2* --omit=*nose2/tests* --omit=*nose2/backports*
+         coverage html -d cover --include=*nose2* --omit=*nose2/tests* --omit=*nose2/backports*
