fixed cov33 and docs

--- a/tox.ini
+++ b/tox.ini
@@ -15,11 +15,10 @@ commands=python setup.py develop
 
 [testenv:docs]
 basepython=python2.7
-changedir=docs
 deps=-r{toxinidir}/requirements.txt
      -r{toxinidir}/requirements-docs.txt
 commands=python setup.py develop
-         sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
+         sphinx-build -c docs -b html -d {envtmpdir}/doctrees docs {envtmpdir}/html
 
 [testenv:py26]
 deps=-r{toxinidir}/requirements.txt
@@ -39,6 +38,6 @@ deps=coverage>=3.3
      -r{toxinidir}/requirements.txt
 commands=python setup.py develop
          coverage erase
-         coverage run -m unittest discover []
+         coverage run -m unittest discover nose2
          coverage report --include=*nose2* --omit=*nose2/tests*
          coverage html -d cover --include=*nose2* --omit=*nose2/tests*
